karnc/tests/fixtures/negative/220_signature_missing_secret/src/demo.karn
context demo

actor Hook { auth = Signature(header = "X-Sig") }
